:bug: fix title and overflow
Title now shows english, japanese or chinese title. Overflow of titles is also fixed with using css.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -68,7 +68,35 @@ main a:hover {
 
 main article p {
   max-width: 284px;
+  /* height: 4.4em;
+  word-break:normal;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: normal; */
 }
+
+.overflow {
+  --max-lines: 3;
+  position: relative;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
+  padding-right: 1rem; /* space for ellipsis */
+}
+.overflow::before {
+  position: absolute;
+  content: "...";
+  bottom: 0;
+  right: 0;
+}
+.overflow::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 1rem;
+  height: 1rem;
+}
+
 
 #detail {
   display: inline-grid;
